--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Google Fonts  -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
 
-    <!-- Favicon  -->
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="/assets/main.css">
-    
-    <title>Tharindu Nimesh | Web Designer</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  <!-- SEO Words -->
+  <meta name="keywords" content="Tharindu Nimesh, Tharindu, Nimesh,Software Engineer, Web Developer, Sri Lanka" />
+  <meta 
+    name="description"
+    content="Tharindu Nimesh, a passionate student at the Java Institute For Advanced Technology (JIAT) based in Sri Lanka." 
+  />
+
+  <!-- Google Fonts  -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+
+  <!-- Favicon  -->
+  <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/assets/main.css">
+
+  <title>Tharindu Nimesh | Web Designer</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
